# training_jlpt

./: .gitignore  AGENTs.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  projectState.json  pyproject.toml
data/: README.md
data/n5/: README.md  n5_comparison.xlsx  n5_master.xlsx
data/schema/: README.md  n5_comparison_schema.md  n5_master_schema.md
docs/: agentGuide.md  agent_guide.md  apiEndpoints.md  api_endpoints.md  dataPipeline.md  data_pipeline.md  databaseSchema.md  database_schema.md  decisionLog.md  decision_log.md  developmentBlueprint.md  glossary.md  implementationRoadmap.md  implementation_roadmap.md  localDevSetup.md  local_dev_setup.md  productOverview.md  product_overview.md  project_summary.md  serviceFlows.md  service_flows.md
prompts/: AGENTs.md  be_jaehyeon_prompt.md  de_sujin_prompt.md  fe_harin_prompt.md  jp_sasaki_prompt.md  jp_tsukuya_prompt.md  pm_minseok_prompt.md
prompts/_spawn_templates/: kickoff.md
scripts/: demo_explanation.py  diagnostic_questions_v1.json  embed_chunks.py  generate_n5_xlsx.py  load_chunks.py  seed_diagnostic_questions.py  try_send_email.py
src/api/: main.py
src/core/: config.py
src/db/: session.py
src/services/: __init__.py
src/ui/: __init__.py  (+3 more)
tests/: conftest.py  test_cache_key.py  test_cache_memory.py  test_diagnostic_api.py  test_diagnostic_flow.py  test_diagnostic_leveling.py  test_diagnostic_scoring.py  test_embed.py  test_explanation.py  test_health.py  test_llm_provider.py  test_loader.py  test_models.py  test_seed_diagnostic_questions.py  test_ui_render.py  test_web_routes.py
(+84 files in other folders)
