[project]
name = "jlpt"
version = "0.1.0"
description = "JLPT 학습자를 위한 AI 기반 적응형 학습 진단 에이전트"
authors = [
    {name = "duehee",email = "tjwjdqls01@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # API / 서버
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # DB / ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # 에이전트 / LLM
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.40.0",

    # 벡터 DB (pgvector — PostgreSQL extension)
    "pgvector>=0.3.0",

    # 캐시
    "redis>=5.0.0",

    # 설정 / 환경변수
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # 데모 UI
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
